# OTA_main

./: .gitignore  README.md  mqtt_log31.pcap  mqtt_messages31.csv  tree.txt
OTA_Director_Server/: .gitignore
OTA_Director_Server/DB/v0.0.0/: IC_someip
OTA_Director_Server/IC_someip/: Dial.qml  ICStubImpl.h  Needle.qml  SpeedText.qml  battery_gauge.cpp  batteryupdate.cpp  batteryupdate.h  ic_interstubimpl.cpp  ic_interstubimpl.h  lrsign.cpp  lrsign.h  main.cpp  mode.h  pdc.h  piracer_control.cpp  receiver.cpp  rpm_gauge.cpp  sender.h  speed.h  speedProvider.h  vehiclecomponents.h
OTA_Director_Server/IC_someip1/: GaugeBar.qml  battery_gauge.h  build.ninja  gear.cpp  qml.qrc
OTA_Director_Server/TestABCh/: main.qml
OTA_Director_Server/data/: output.json  received.json  update.json  update.tar.xz
OTA_Director_Server/install_folder/lib/: libvsomeip3-e2e.so.3
OTA_Director_Server/src/: Image_Repository.py  OTA_publish_director.py  OTA_publish_watchdog.py  OTA_publish_watchdog_develop.py  OTA_publish_watchdog_image.py  generate_cert.py  http_server.py  new_watchdog.py  ns_Image_Repository.py  ns_OTA_publish_watchdog_image.py  receive_signature.json
OTA_Director_Server/src/data/: target_image.json
OTA_Director_Server/src/uploads/: update.tar.xz
OTA_Director_Server/src/utils/: compare_json.py  json_handler.py  make_json.py  make_tarball_to_send.py
OTA_Director_Server/src_add/IC_someip/: CMakeLists.txt  DialSet.qml  ICStubImpl.cpp  battery.cpp  get_battery.h  main.qml
OTA_Director_Server/src_add/TestABC/: main.cpp
OTA_Director_Server/src_add/TestABCa/: CMakeLists.txt
OTA_Director_director/IC_someip/: DialSet.qml  battery.h  main.cpp  mode.cpp  rpm_gauge.h
OTA_Director_director/IC_someip1/: CMakeLists.txt  IC_someip.cbp  IconBar.qml  SpeedText.qml  gear.h  main.qml  rules.ninja  speed.cpp
OTA_Director_director/IC_someip1/.cmake/api/v1/reply/: cmakeFiles-v1-aa254b1734c30011811f.json  codemodel-v2-c25912cc7df5c280ebdf.json
OTA_Director_director/src/: Director_Repository.py  OTA_publish_director.py  OTA_publish_watchdog_develop.py  OTA_publish_watchdog_image.py  http_server.py  ns_Director_Repository.py  ns_OTA_publish_director.py  receive_signature.json  signed_update.json  versionList.json
OTA_Director_director/src/data/: update.tar.xz
OTA_Director_director/src/uploads/: update.tar.xz
OTA_Director_director/src/utils/: json_handler.py  output.json
OTA_Handler/: status.txt
OTA_Handler/boot_manager/: TestABC  boot-manager.service  boot_manager.sh  log.txt  simpleStart.sh  status.json
OTA_Handler/boot_manager/dir1/: start1.sh
OTA_Handler/boot_manager/dir2/: IC_someip  start1.sh
OTA_Handler/boot_manager/tmp/: IC_someip
OTA_Handler/fidl/: handler_msg.fdepl  handler_msg.fidl
OTA_Handler/fidl/resource/: OTA_exter.fdepl
OTA_Handler/handler_tcp_client/: CMakeLists.txt  HU.json  IC.json  list.json  main.cpp
OTA_Handler/handler_tcp_client/build1/: Makefile
OTA_Handler/handler_tcp_client/update/: red_window
OTA_Handler/handler_tcp_client/update_backup/: TestABC  green_window1  gui_Test
OTA_Handler/handler_tcp_server/: CMakeLists.txt  handlerStubImpl.cpp  handlerStubImpl.hpp  main.cpp
OTA_Handler/handler_tcp_server/tmp/: received.json
OTA_Handler/handler_tcp_server_exter/: CMakeLists.txt  HandlerStatus.hpp  handlerStubImpl.cpp  handlerStubImpl.hpp  main.cpp
OTA_Handler/handler_tcp_server_exter/tmp/: received.json
OTA_Handler/json/: client.json  client.sh  server.json  server.sh  server_exter.json  server_exter.sh
OTA_Handler/send_list/handler_tcp_client/: CMakeLists.txt  main.cpp
OTA_Handler/send_list/handler_tcp_server/: CMakeLists.txt  handlerStubImpl.cpp  handlerStubImpl.hpp  main.cpp
OTA_Handler/send_list/json/: client.json  client.sh  server.json  server.sh
OTA_Prime_ECU/: .mqtt_test.py.swp  httpsclient.py  image_target.json  json_manage.py  mqtt_test.py  ns_mqtt_test.py  path_dict.json  prime_ecu_download.py  receive_signature.json  update_target.json  versionList.json
OTA_Prime_ECU/TestABC/: CMakeLists.txt  camera_backend.cpp  camera_backend.h  main.cpp  main.qml
OTA_Prime_ECU/files/IC_someip/: CMakeLists.txt  pdc.cpp  qml.qrc  receiver.h  sender.cpp  vehiclecomponents.cpp  versionList.json
OTA_Prime_ECU/files/TestABC/: main.cpp  versionList.json
OTA_Prime_ECU/history/: history.json
OTA_Prime_ECU/history/0.0.0/: backup_list.json  main.cpp  main.qml  qml.qrc
OTA_Prime_ECU/history/0.0.1/: backup_list.json  main.cpp
OTA_Prime_ECU/history/0.3.0/: backup_list.json  main.cpp
OTA_Prime_ECU/history/0.9.0/: backup_list.json  main.cpp
OTA_Prime_ECU/history/0.9.5/: backup_list.json  main.cpp
OTA_Prime_ECU/history/0.9.9/: backup_list.json  main.cpp
OTA_Prime_ECU/history/1.9.9/: backup_list.json
OTA_Prime_ECU/history/2.9.9/: backup_list.json
OTA_Prime_ECU/history/3.4.0/: backup_list.json  main.cpp  qml.qrc
OTA_Prime_ECU/history/6.1.2/: backup_list.json
OTA_Prime_ECU/history/6.6.2/: CMakeLists.txt  backup_list.json  main.cpp
OTA_Prime_ECU/updateFiles/: update.json
OTA_Prime_ECU/updateFiles/update_files/: CMakeLists.txt  DistanceText.qml  main.cpp  (+6 more)
OTA_Prime_ECU/utils/: OTA_GUI.py  arduino_fota_test.py  bluetooth_test.py  test_gui.py
OTA_client/: json_manage.py  mqtt_test.py  path_dict.json
OTA_client/TestABC/: CMakeLists.txt  qml.qrc
OTA_client/updateFiles/: update.json
attack_scenarios/mitm/: arp_spoof.sh  arp_spoof_client_broker.sh  arp_spoof_server_broker.sh  malicious_server.py
attack_scenarios/replay/: replayattack.py
certs/: ca.crt  ca.srl  https_server.crt  https_server.key  mqtt_openssl.cnf  mqtt_server.crt  mqtt_server.csr
digital_signature/: ecdsa_basic.py  image_public.pem  message.txt  pub_signature.py  signature  sub_signature.py
python3_cpp_secure_socket/python3_cpp_secure_socket/: cplusplus.cpp  python3.py  start_ecu_exter.sh  start_handler.sh
python3_cpp_secure_socket/python3_cpp_secure_socket/OTA_Handler/: CMakeLists.txt  main.cpp  otaStubImpl.cpp  otaStubImpl.h
python3_cpp_secure_socket/python3_cpp_secure_socket/OTA_Prime_ECU_exter/: CMakeLists.txt  main.cpp  start.sh
(+244 files in other folders)
